@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-13
+2012-11-15 Andy Salnikov
+- upgrading to pdsdata V05-01-00
+- new class bld/BldDataGMDV1
+
 Tag: V00-03-12
 2012-11-08 Andy Salnikov
 - upgrading to pdsdata V04-05-00
